tests/snapshots/spanshot_request@4550948109133822766.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  request: "[&x]: &mut [&T]"
---
[&x] @ p: &mut [&T]
// Applying rule `ConstructorRef`
&x @ &mut (*p).0: &mut &T
// Applying rule `Deref`
&x @ (&mut (*p).0 as &_): &&T
// Applying rule `ExprSimplification`
&x @ &(*p).0: &&T
// Applying rule `Deref`
x @ *&(*p).0: &T

// Final bindings (simplified):
let x: &T = *&(*p).0
