tests/snapshots/spanshot_request@4637196844647516729.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[ref mut x]: &mut [T]`

[ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref mut x @ &mut (*p).0: &mut T
// Applying rule `Binding`
x @ &mut &mut (*p).0: &mut &mut T

// Final bindings:
let x: &mut &mut T = &mut &mut (*p).0
